syntax = "proto3";

package nsc;

option go_package = "generated/nsc; nsc";
service NSCService {
  // Receives pod name and namespace
  rpc ProcessPod(PodRequest) returns (PodResponse) {}
}

message PodRequest {
  string Name = 1;
  string Namespace = 2;
  string Node_name = 3;
  string Network_service = 4;
  string InodeURL = 5;
}

message PodResponse {
  string Status = 1;
}
